--- a/INDITEX/pom.xml
+++ b/INDITEX/pom.xml
@@ -30,53 +30,52 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		
-			<!-- Spring Boot Starter Web -->
+
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-web</artifactId>
 	    </dependency>
-	
-	    <!-- Spring Boot Starter Data JPA -->
+
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-data-jpa</artifactId>
 	    </dependency>
 	
-	    <!-- H2 Database (Base de datos en memoria) -->
 	    <dependency>
 	        <groupId>com.h2database</groupId>
 	        <artifactId>h2</artifactId>
 	        <scope>runtime</scope>
 	    </dependency>
-	
-	    <!-- Spring Boot Starter Test (JUnit y Mockito) -->
+
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-test</artifactId>
 	        <scope>test</scope>
 	    </dependency>
-	
-	    <!-- Mockito Core (Para pruebas unitarias con Mocking) -->
+
 	    <dependency>
 	        <groupId>org.mockito</groupId>
 	        <artifactId>mockito-core</artifactId>
 	        <scope>test</scope>
 	    </dependency>
-	
-	    <!-- Lombok (Para reducir código boilerplate) -->
+
 	    <dependency>
 	        <groupId>org.projectlombok</groupId>
 	        <artifactId>lombok</artifactId>
 	        <scope>provided</scope>
 	    </dependency>
 	
-	    <!-- Spring Boot DevTools (Recarga en caliente, opcional) -->
 	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-devtools</artifactId>
 	        <optional>true</optional>
 	    </dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.1</version>
+		</dependency>
 		
 	</dependencies>
 
